[gd_scene load_steps=8 format=3 uid="uid://nnaj0fpgrduf"]

[ext_resource type="Script" path="res://scenes/ui/player_panel/player_panel.gd" id="1_ejwk7"]
[ext_resource type="Theme" uid="uid://ckrcu0sh1ursg" path="res://scenes/ui/player_panel/progress_theme.tres" id="2"]
[ext_resource type="FontFile" path="res://addons/arcade/assets/fonts/Quantico30.tres" id="2_hav40"]
[ext_resource type="Texture2D" uid="uid://we8getbieyb6" path="res://addons/arcade/assets/icons/radio_checked.png" id="3_lqmc0"]
[ext_resource type="Texture2D" uid="uid://bj75dhnee6lyl" path="res://addons/arcade/assets/icons/radio_unchecked.png" id="4_07dv2"]

[sub_resource type="Theme" id="Theme_ya2l1"]
Button/fonts/font = ExtResource("2_hav40")
CheckBox/icons/checked = ExtResource("3_lqmc0")
CheckBox/icons/checked_disabled = ExtResource("3_lqmc0")
CheckBox/icons/unchecked = ExtResource("4_07dv2")
CheckBox/icons/unchecked_disabled = ExtResource("4_07dv2")
Label/fonts/font = ExtResource("2_hav40")

[sub_resource type="GDScript" id="2"]
script/source = "extends ProgressBar

var ProgressTheme = preload(\"res://scenes/ui/player_panel/progress_theme.tres\")

# Called when the node enters the scene tree for the first time.
func _ready():
	theme = ProgressTheme.duplicate(true)
	
func setColor(color: Color):
	theme.get(\"ProgressBar/styles/bg\").border_color = color
	theme.get(\"ProgressBar/styles/fg\").bg_color = color
"

[node name="PlayerPanel" type="Panel"]
custom_minimum_size = Vector2(600, 50)
anchors_preset = -1
anchor_top = 0.937
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 0.399963
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ejwk7")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -25.0
offset_right = 600.0
offset_bottom = 27.0

[node name="leftHalf" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RoundIndicator" type="CheckBox" parent="HBoxContainer/leftHalf"]
layout_mode = 2
focus_mode = 0
theme = SubResource("Theme_ya2l1")
disabled = true

[node name="rightHalf" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="icon" type="TextureRect" parent="HBoxContainer/rightHalf"]
layout_mode = 2
size_flags_vertical = 4

[node name="ProgressBar" type="ProgressBar" parent="HBoxContainer/rightHalf"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource("2")
value = 25.0
script = SubResource("2")
